$Id: CHANGES,v 1.7 2009/07/21 20:25:23 avr Exp $

CHANGES file for project GPSDisplay
============================================================================

ToDo:
-----
- fix pin assignments for the LCD display
- add button
- place text strings in Flash (ProgMem)

2009/07/21 (thjm) - wiring for LCD finally OK:
                    - one display turns out to be 2x1x8 (=1x16)
		    - second one has probably defective rows (=2x16)
		    
2009/07/16 (thjm) - wiring scheme for PC-GPS-AVRTracker adaptor:

                     PC (DTE)                           GPS (DCE) 
		    ----------                         -----------
		     RxD (2,gn) ----------------------- RxD (3,ye)
		     TxD (3,ye) ----------------+ +---- TxD (2,ye)
		     GND (5,bn) --------------*-------- GND (5,bn)
		                              | | |
		                              | | |     AVR (DCE)
					      | | |    -----------
					      | | +---- RxD (3,ye)
					      | +------ TxD (2,gn)
					      +-------- GND (5,bn)

                  - test program for the LCD added (testLCD.c)
		  - worked on Makefile (pattern rules)
		  
2009/07/15 (thjm) - added (optional) writing to file of NMEA strings

2009/07/10 (thjm) - SConstruct splitted into SConscript
                    + extra build directory
		  - Clean() target to removed .build directory for 'scons -c'
		  - AVR implementation added:
		    - Makefile is for AVR (similar to WhereAVR)
		    - GPSDisplay.c contains the main() for the AVR
		    - using LCD code of P.Fleury
		    - using UART code of P.Fleury for GPS comms
		      -> tbd: replace by code of N4TXI
		  - more text into file README
		  - PC programs sleeps a bit if no characters available

2009/07/08 (thjm) - current functionality:
                    - reading and parsing NMEA strings
		    - simulation of LCD display
		    - display most strings correctly on sim. LCD display
		    
2009/07/01 (thjm) - start of project
