@@ -1,13 +1,20 @@
-$Id: CHANGES,v 1.7 2009/07/21 20:25:23 avr Exp $
+$Id: CHANGES,v 1.8 2009/07/24 15:52:40 avr Exp $
 
 CHANGES file for project GPSDisplay
 ============================================================================
 
 ToDo:
 -----
-- fix pin assignments for the LCD display
-- add button
 - place text strings in Flash (ProgMem)
+
+
+2009/07/24 (thjm) - imported get8key4.* (P.Dannegger) 
+                  - checking push button to advance LCD display mode
+		    - this uses counter1 which is also used in WhereAVR
+		  - LcdDisplay.* -> LCDDisplay.*
+
+2009/07/23 (thjm) - added a few (unnecessary !?) more gimicks to the code
+                  - compile time option to use N4TXIs Serial.* module (inact.)
 
 2009/07/21 (thjm) - wiring for LCD finally OK:
                     - one display turns out to be 2x1x8 (=1x16)
